deployment-live-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${APP_NAMESPACE}
  annotations:
    field.cattle.io/projectId: ${PROJECT_ID}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}
  namespace: ${APP_NAMESPACE}
  labels:
    workload.user.cattle.io/workloadselector: deployment-${APP_NAMESPACE}-${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-${APP_NAMESPACE}-${APP_NAME}
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-${APP_NAMESPACE}-${APP_NAME}
    spec:
      imagePullSecrets:
      - name: ext-docker-registry
      containers:
      - name: ${APP_NAME}-instance
        image: ${CI_IMAGE_NAME}:${CI_COMMIT_BRANCH}-${CI_PIPELINE_IID}
        ports:
        - containerPort: 80
          name: webserver
        # resources:
        #   limits:
        #     cpu: "0.1"
        #     memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:${APP_NAMESPACE}:${APP_NAME}"]'
    workload.cattle.io/targetWorkloadIdNoop: "true"
    workload.cattle.io/workloadPortBased: "true"
  name: ${APP_NAME}
  namespace: ${APP_NAMESPACE}
spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    workload.user.cattle.io/workloadselector: deployment-${APP_NAMESPACE}-${APP_NAME}
  sessionAffinity: None
  type: ClusterIP
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ${APP_NAME}-in
#  namespace: ${APP_NAMESPACE}
#spec:
#  rules:
#  - host: pse-dev.layanan.go.id
#    http:
#      paths:
#      - path: /
#        pathType: ImplementationSpecific
#        backend:
#          service:
#            name: ${APP_NAME}
#            port:
#              number: 80
#  tls:
#  - hosts:
#    - pse-dev.layanan.go.id
