deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${APP_NAMESPACE}
  annotations:
    field.cattle.io/projectId: ${PROJECT_ID}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}
  namespace: ${APP_NAMESPACE}
  labels:
    workload.user.cattle.io/workloadselector: deployment-${APP_NAMESPACE}-${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-${APP_NAMESPACE}-${APP_NAME}
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-${APP_NAMESPACE}-${APP_NAME}
    spec:
      imagePullSecrets:
      - name: ext-docker-registry
      containers:
      - name: ${APP_NAME}
        image: ${CI_IMAGE_NAME}:${APP_ENV}-${CI_PIPELINE_IID}
        ports:
        - containerPort: ${APP_PORT}
          name: web
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-svc
  namespace: ${APP_NAMESPACE}
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:${APP_NAMESPACE}:${APP_NAME}"]'
    workload.cattle.io/targetWorkloadIdNoop: "true"
    workload.cattle.io/workloadPortBased: "true"
spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - name: web
    port: ${APP_PORT}
    protocol: TCP
    targetPort: ${APP_PORT}
  selector:
    workload.user.cattle.io/workloadselector: deployment-${APP_NAMESPACE}-${APP_NAME}
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_NAME}-in
  namespace: ${APP_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      location ~* ^/(shop|blog|test|site|explorer|wp-|config) {
        deny all;
        return 403;
      }
      location ~* (\.txt|\.action|\.cgi|\.py|\.vm|\.jsp|\.cfm|\.portal|\.ccp|\.rst)$ {
        deny all;
        return 403;
      }
spec:
  rules:
  - host: ${APP_URN}
    http:
      paths:
      - path: ${APP_URN_PATH}
        pathType: ImplementationSpecific
        backend:
          service:
            name: ${APP_NAME}-svc
            port:
              number: ${APP_PORT}
  tls:
  - hosts:
    - ${APP_URN}
